View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] |
ID | Project | Category | View Status | Date Submitted | Last Update |
0032049 | Community | [OCCT] OCCT:Data Exchange | public | 2021-01-11 19:24 | 2021-01-11 22:39 |
|
Reporter | robertlipman | |
Assigned To | dpasukhi | |
Priority | normal | Severity | major | |
Status | new | Resolution | open | |
Platform | | OS | | OS Version | |
Product Version | [OCCT] 7.5.0 | |
Target Version | [OCCT] 7.6.0* | Fixed in Version | | |
|
Summary | 0032049: Data Exchange - STEP file import problems |
Description | I have three STEP files that cause import problems with CAD Assistant 1.5.0.2
Two of the files cannot be imported sp7_10_nx-242 and 'Parameter Test Part.stp'. I think I previously submitted the sp7 file as a problem.
The other file sp7_04_dx-242.stp can import correctly, but the part is not visible. The transparency is set to zero. I think I also submitted this file before because it could not be imported.
Other viewers (VariCAD, C3D Viewer, eDrawings) do not have problems importing and displaying the files. |
Steps To Reproduce | Try the files in CAD Assistant 1.5.0.2 |
Tags | No tags attached. |
|
Test case number | |
|
Attached Files | OCC-errors.zip (1,684,006 bytes) 2021-01-11 19:24 |
|